@@ -32,6 +32,7 @@
     </xsd:sequence>
     <xsd:attribute name="submitter" use="required"/>
     <xsd:attribute name="format" use="required"/>
+    <xsd:attribute name="alias" use="required"/>
   </xsd:complexType>
 
   <xsd:complexType name="pluginType">
