@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10911] "Indfør indexingAlias i PTI_jobs_xml og lad det plugin der skal bruge det hente det frem"
    - bug [10809] "IndexingAlias skal ud af CargoContainerens add metode"
    - bug [10852] "ScriptMethodsForReviewRelation.createRelation() skal kodes om til at kunne tage genrelle relationer"
    - bug [10769] "DatadockJob er en overflødig klasse"
